Live code fixing

--- a/css3/basic-css-selectors/index.html
+++ b/css3/basic-css-selectors/index.html
@@ -246,7 +246,7 @@
 }</code></pre>
         </article>
         <article>
-            <header class="css-property title">:first y :last</header>
+            <header class="css-property title">:first-child y :last-child</header>
             <p>Selecciona el primer o último hijo.</p>
             <div class="css-element">
                 <div class="button-group">
@@ -258,11 +258,11 @@
                 </div>
             </div>
             <pre><code class="html">&lt;div class=&quot;button-group&quot;&gt;
-&lt;div class=&quot;button&quot;&gt;Primero&lt;/div&gt;
-&lt;div class=&quot;button&quot;&gt;Otro&lt;/div&gt;
-&lt;div class=&quot;button&quot;&gt;Otro&lt;/div&gt;
-&lt;div class=&quot;button&quot;&gt;Otro&lt;/div&gt;
-&lt;div class=&quot;button&quot;&gt;&Uacute;ltimo&lt;/div&gt;
+    &lt;div class=&quot;button&quot;&gt;Primero&lt;/div&gt;
+    &lt;div class=&quot;button&quot;&gt;Otro&lt;/div&gt;
+    &lt;div class=&quot;button&quot;&gt;Otro&lt;/div&gt;
+    &lt;div class=&quot;button&quot;&gt;Otro&lt;/div&gt;
+    &lt;div class=&quot;button&quot;&gt;&Uacute;ltimo&lt;/div&gt;
 &lt;/div&gt;</code><code class="css">.button-group .button {
     display: inline;
     background-color: #007bff;
