Implements navbar component

--- a/live coding/index.html
+++ b/live coding/index.html
@@ -6,11 +6,37 @@
   <meta name="description" content="Front End Training: Live Coding">
   <meta name="author" content="Planex">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
+  <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:400,500,500italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Grand+Hotel:400,500,500italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
 <body>
-    
+    <div class="navbar">
+        <div class="logo">GoodFood</div>
+        <ul class="menu top-right">
+            <li class="active">
+                <a href="#home">Home</a>
+            </li>
+            <li>
+                <a href="#aboutMe">About Me</a>
+            </li>
+            <li>
+                <a href="#myRecipes">My Recipes</a>
+                </li>
+            <li>
+                <a href="#blog">Blog</a>
+            </li>
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
+        </ul>
+    </div>
+    <div class="content">
+        <img class="header" src="img/header.jpg">
+    </div>
+    <div class="footer">Footer</div>
 </body>
 </html>
