--- a/css3/basic-html-elements/index.html
+++ b/css3/basic-html-elements/index.html
@@ -64,6 +64,7 @@
             <form>
                 <input type="text" placeholder="Usuario">
                 <input type="password" placeholder="Contraseña">
+                <input type="file">
                 <select name="select">
                     <option value="1">Uno</option>
                     <option value="2">Dos</option>
