Mobile First grid system

--- a/code-examples/media-queries/index.html
+++ b/code-examples/media-queries/index.html
@@ -13,8 +13,8 @@
         <h1>Frontend Training</h1>
         <h2>CSS - Media Queries</h2>
     </header>
-    <section>
-        <h3 class="css-property">Desktop First</h3>
+    <section class="desktop-first">
+        <h3>Simple Column System</h3>
         <div class="css-container-element">
             <div class="css-element">
                 <div class="content">First Column Content</div>
