Toggle color media queries

--- a/code-examples/media-queries/index.html
+++ b/code-examples/media-queries/index.html
@@ -13,7 +13,13 @@
         <h1>Frontend Training</h1>
         <h2>CSS - Media Queries</h2>
     </header>
-    <section class="desktop-first">
+    <section class="toggle-color">
+        <h3>Toggle Color</h3>
+        <div class="css-element">
+            Este elemento cambia de color según el ancho del viewport.
+        </div>
+    </section>
+    <section class="grid-system desktop-first">
         <h3>Simple Column System</h3>
         <div class="css-container-element">
             <div class="css-element">
