Cross browser slides

--- a/code-examples/media-queries/index.html
+++ b/code-examples/media-queries/index.html
@@ -21,6 +21,12 @@
     </section>
     <section class="grid-system desktop-first">
         <h3>Simple Column System</h3>
+        <p>
+            Los elementos con valores de <span class="code">width</span> porcentuales no es conveniente que tengan <span class="code">margin, border y padding</span> en los laterales ya que pueden sobrepasar el viewport.
+        </p>
+        <p>
+            Es por esto que se suelen usar valores porcentuales de <span class="code">width</span> en los elementos padres o contenedores.
+        </p>
         <div class="css-container-element">
             <div class="css-element">
                 <div class="content">First Column Content</div>
