Adds missing content and styles

--- a/slides/cross-browser/index.html
+++ b/slides/cross-browser/index.html
@@ -34,6 +34,7 @@
 			<div class="slides">
                 <section>
                     <h1>Cross-Browser<br>Compatibility</h1>
+                    <a href="http://caniuse.com/">Can I use?</a>
                 </section>
                 <section>
                     <h2>Media Queries Support</h2>
