Adds background image to header

--- a/live-coding/index.html
+++ b/live-coding/index.html
@@ -15,7 +15,7 @@
   <![endif]-->
 </head>
 <body>
-    <div class="navbar">
+    <div class="navbar z-navbar">
         <div class="logo">GoodFood</div>
         <div class="menu-toggle">
             <button type="button" class="js-menu-toggle-button">Menu</button>
@@ -39,7 +39,7 @@
         </ul>
     </div>
     <div class="content">
-        <img class="header" src="img/header.jpg">
+        <div class="header"></div>
     </div>
     <div class="footer">Footer</div>
     <script type="text/javascript">
