--- a/exercises/starter/index.html
+++ b/exercises/starter/index.html
@@ -19,9 +19,19 @@
     <div class="exercise-2">
         <h1>Ejercicio 2</h1>
         <p>Posicionar el cuadrado rojo en el centro del rectángulo amarillo.</p>
-        <p>Tener en cuenta que al achicar el viewport se debe mantener centrado horizontalmente.</p>
+        <p class="note">Tener en cuenta que al achicar el viewport se debe mantener centrado horizontalmente.</p>
         <div class="yellow">
             <div class="small red square"></div>
+        </div>
+    </div>
+    <div class="exercise-3">
+        <h1>Ejercicio 3</h1>
+        <p>Mostrar los cuadrados en la misma línea, uno al lado del otro.</p>
+        <p class="note">Intentar que no queden espacios entre los cuadrados.</p>
+        <div class="container">
+            <div class="small red square">1</div>
+            <div class="small yellow square">2</div>
+            <div class="small green square">3</div>
         </div>
     </div>
 </body>
