--- a/exercises/starter/index.html
+++ b/exercises/starter/index.html
@@ -9,30 +9,35 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="exercise-1">
-        <h1>Ejercicio 1</h1>
-        <p>Convertir el cuadrado rojo en un círculo y posicionar en el centro del cuadrado amarillo.</p>
-        <div class="large yellow square">
-            <div class="small red square"></div>
-        </div>
+<div class="exercise-1">
+    <h1>Ejercicio 1</h1>
+    <p>Convertir el cuadrado rojo en un círculo y posicionar en el centro del cuadrado amarillo.</p>
+    <div class="large yellow square">
+        <div class="small red square"></div>
     </div>
-    <div class="exercise-2">
-        <h1>Ejercicio 2</h1>
-        <p>Posicionar el cuadrado rojo en el centro del rectángulo amarillo.</p>
-        <p class="note">Tener en cuenta que al achicar el viewport se debe mantener centrado horizontalmente.</p>
-        <div class="yellow">
-            <div class="small red square"></div>
-        </div>
+</div>
+<div class="exercise-2">
+    <h1>Ejercicio 2</h1>
+    <p>Posicionar el cuadrado rojo en el centro del rectángulo amarillo.</p>
+    <p class="note">Tener en cuenta que al achicar el viewport se debe mantener centrado horizontalmente.</p>
+    <div class="yellow">
+        <div class="small red square"></div>
     </div>
-    <div class="exercise-3">
-        <h1>Ejercicio 3</h1>
-        <p>Mostrar los cuadrados en la misma línea, uno al lado del otro.</p>
-        <p class="note">Intentar que no queden espacios entre los cuadrados.</p>
-        <div class="container">
-            <div class="small red square">1</div>
-            <div class="small yellow square">2</div>
-            <div class="small green square">3</div>
-        </div>
+</div>
+<div class="exercise-3">
+    <h1>Ejercicio 3</h1>
+    <p>Mostrar los cuadrados en la misma línea, uno al lado del otro.</p>
+    <p class="note">Intentar que no queden espacios entre los cuadrados.</p>
+    <div class="container">
+        <div class="small centered red square">1</div>
+        <div class="small centered yellow square">2</div>
+        <div class="small centered green square">3</div>
     </div>
+</div>
+<div class="exercise-4">
+    <h1>Ejercicio 4</h1>
+    <p>Centrar el texto horizontal y verticalmente dentro del cuadrado amarillo.</p>
+    <div class="large yellow square">Amarillo</div>
+</div>
 </body>
 </html>
