--- a/exercises/starter/index.html
+++ b/exercises/starter/index.html
@@ -9,9 +9,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div class="exercise-0">
+    <h1>Ejercicio 0</h1>
+    <p>Configurar el cuadrado verde con:</p>
+    <ol>
+        <li>Padding de 40px superior e inferior y 20px izquierda y derecha.</li>
+        <li>Borde rojo de 20px superior e inferior y 40px izquierda y derecha.</li>
+        <li>Margin de 10px en todos los lados.</li>
+    </ol>
+    <div class="small green square"></div>
+</div>
 <div class="exercise-1">
     <h1>Ejercicio 1</h1>
     <p>Convertir el cuadrado rojo en un círculo y posicionar en el centro del cuadrado amarillo.</p>
+    <p class="note">No usar margins ni paddings.</p>
     <div class="large yellow square">
         <div class="small red square"></div>
     </div>
