--- a/live-coding/index.html
+++ b/live-coding/index.html
@@ -1,20 +1,25 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Live Coding</title>
-  <meta name="description" content="Front End Training: Live Coding">
-  <meta name="author" content="Planex">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
-  <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:400,500,500italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Grand+Hotel:400,500,500italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
-  <!--[if lt IE 9]>
+    <meta charset="utf-8">
+    <title>Live Coding</title>
+    <meta name="description" content="Front End Training: Live Coding">
+    <meta name="author" content="Planex">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <!--Component styles-->
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/header.css">
+    <!--External dependencies-->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
+    <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:400,500,500italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Grand+Hotel:400,500,500italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+    <![endif]-->
 </head>
 <body>
+    <!--Based on: http://pico.freshpixels.pl/goodfood/test.html-->
     <div class="navbar z-navbar">
         <div class="logo">GoodFood</div>
         <div class="menu-toggle">
@@ -42,17 +47,6 @@
         <div class="header"></div>
     </div>
     <div class="footer">Footer</div>
-    <script type="text/javascript">
-      var menuToggleButton = document.getElementsByClassName('js-menu-toggle-button')[0];
-      var menu = document.getElementsByClassName('js-menu')[0];
-      menuToggleButton.onclick = function() {
-        var currentDisplay = menu.style.display || 'none';
-        if (currentDisplay === 'none') {
-          menu.style.display = 'block';
-        } else {
-          menu.style.display = 'none';
-        }
-      };
-    </script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
