Adds third session review and fourth session agenda

--- a/exercises/starter/index.html
+++ b/exercises/starter/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<header>
+    <h1>Starter Exercises</h1>
+</header>
 <div class="exercise-0">
     <h1>Ejercicio 0</h1>
     <p>Configurar el cuadrado verde con:</p>
