Links to useful CSS properties

--- a/slides/third-session-review/index.html
+++ b/slides/third-session-review/index.html
@@ -52,13 +52,22 @@
 					</ul>
 				</section>
 				<section>
+					<h3>Propiedades CSS para profundizar</h3>
+					<ul>
+						<li><a href="https://css-tricks.com/almanac/properties/b/background/" target="_blank">Background</a></li>
+						<li><a href="https://css-tricks.com/almanac/properties/t/transition/" target="_blank">Transition</a></li>
+						<li><a href="https://css-tricks.com/almanac/properties/t/transform/" target="_blank">Transform</a></li>
+						<li><a href="https://css-tricks.com/almanac/properties/a/animation/" target="_blank">Animation</a></li>
+					</ul>
+				</section>
+				<section>
 					<h3>Agenda de Hoy</h3>
 					<p>Aplicamos todos los conocimientos que adquirimos.</p>
 					<ul>
-						<li><a href="../../exercises/starter/index.html">Starter Exercises</a></li>
-						<li><a href="../../exercises/intermediate/index.html">Intermediate Exercises</a></li>
+						<li><a href="../../exercises/starter/index.html" target="_blank">Starter Exercises</a></li>
+						<li><a href="../../exercises/intermediate/index.html" target="_blank">Intermediate Exercises</a></li>
 						<li>Break :D</li>
-						<li><a href="../../live-coding/index.html">Develop Image Grid</a></li>
+						<li><a href="../../live-coding/index.html" target="_blank">Develop Image Grid</a></li>
 					</ul>
 				</section>
             </div>
