--- a/live-coding/index.html
+++ b/live-coding/index.html
@@ -19,7 +19,7 @@
     <![endif]-->
 </head>
 <body>
-    <!--Based on: http://pico.freshpixels.pl/goodfood/test.html-->
+    <!--Based on: http://pico.freshpixels.pl/goodfood/index.html-->
     <div class="navbar z-navbar">
         <div class="logo">GoodFood</div>
         <div class="menu-toggle">
