--- a/slides/first-session-review/index.html
+++ b/slides/first-session-review/index.html
@@ -129,7 +129,14 @@
                     <h3>Specificity</h3>
                     <img src="img/specificity-calculationbase.png" >
                 </section>
-                
+                <section>
+                    <h3>Agenda de Hoy</h3>
+                    <ul>
+                        <li><a href="../ui-components/index.html" target="_blank">UI Components</a></li>
+                        <li><a href="http://pico.freshpixels.pl/goodfood/index.html" target="_blank">Mockup Analysis</a></li>
+                        <li><a href="../../live-coding/index.html" target="_blank">Live Coding Navbar Component</a></li>
+                    </ul>
+                </section>
             </div>
         </div>
         
