--- a/slides/second-session-review/index.html
+++ b/slides/second-session-review/index.html
@@ -60,6 +60,16 @@
                     <h4>Definir valores margin/padding de Box Model</h4>
                     <img src="img/boxmodel.png" >
                 </section>
+				<section>
+					<h3>Agenda de Hoy</h3>
+					<ul>
+						<li><a href="../responsive/index.html" target="_blank">Responsive Web Design</a></li>
+						<li><a href="../../code-examples/media-queries/index.html" target="_blank">CSS Media Queries</a></li>
+						<li><a href="../cross-browser/index.html" target="_blank">Cross Browser Compatibility</a></li>
+						<li>Break :D</li>
+						<li><a href="../../live-coding/index.html" target="_blank">Navbar Component for Mobile and Tablet</a></li>
+					</ul>
+				</section>
             </div>
         </div>
         
