Adds Flexbox link

--- a/slides/third-session-review/index.html
+++ b/slides/third-session-review/index.html
@@ -55,6 +55,7 @@
 					<h3>Propiedades CSS para profundizar</h3>
 					<ul>
 						<li><a href="https://css-tricks.com/almanac/properties/b/background/" target="_blank">Background</a></li>
+						<li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/" target="_blank">Flexbox</a></li>
 						<li><a href="https://css-tricks.com/almanac/properties/t/transition/" target="_blank">Transition</a></li>
 						<li><a href="https://css-tricks.com/almanac/properties/t/transform/" target="_blank">Transform</a></li>
 						<li><a href="https://css-tricks.com/almanac/properties/a/animation/" target="_blank">Animation</a></li>
