Adds thumbnail component

--- a/live-coding/index.html
+++ b/live-coding/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/thumbnail.css">
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -45,6 +46,14 @@
     </div>
     <div class="content">
         <div class="header"></div>
+        <div class="thumbnail">
+            <div class="image-container">
+                <img src="img/food1.jpg">
+                <div class="likes">2056</div>
+                <div class="category">Dessert</div>
+            </div>
+            <div class="name">Momofuku Ooey Gooey Butter Cake</div>
+        </div>
     </div>
     <div class="footer">Footer</div>
     <script type="text/javascript" src="js/main.js"></script>
