Implements simple grid for thumbnails

--- a/live-coding/index.html
+++ b/live-coding/index.html
@@ -46,13 +46,47 @@
     </div>
     <div class="content">
         <div class="header"></div>
-        <div class="thumbnail">
-            <div class="image-container">
-                <img src="img/food1.jpg">
-                <div class="likes">2056</div>
-                <div class="category">Dessert</div>
+        <div class="row">
+            <div class="column-25">
+                <div class="thumbnail">
+                    <div class="image-container">
+                        <img src="img/food1.jpg">
+                        <div class="likes">2056</div>
+                        <div class="category">Dessert</div>
+                    </div>
+                    <div class="name">Momofuku Ooey Gooey Butter Cake</div>
+                </div>
             </div>
-            <div class="name">Momofuku Ooey Gooey Butter Cake</div>
+            <div class="column-25">
+                <div class="thumbnail">
+                    <div class="image-container">
+                        <img src="img/food2.jpg">
+                        <div class="likes">154</div>
+                        <div class="category">Main Dish</div>
+                    </div>
+                    <div class="name">Turkey Grilled Cheese Sandwich</div>
+                </div>
+            </div>
+            <div class="column-25">
+                <div class="thumbnail">
+                    <div class="image-container">
+                        <img src="img/food3.jpg">
+                        <div class="likes">341</div>
+                        <div class="category">Dessert</div>
+                    </div>
+                    <div class="name">Momofuku Ooey Gooey Butter Cake</div>
+                </div>
+            </div>
+            <div class="column-25">
+                <div class="thumbnail">
+                    <div class="image-container">
+                        <img src="img/food4.jpg">
+                        <div class="likes">90</div>
+                        <div class="category">Main Dish</div>
+                    </div>
+                    <div class="name">Turkey Grilled Cheese Sandwich</div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="footer">Footer</div>
